--- a/src/components/Switch/Switch.css
+++ b/src/components/Switch/Switch.css
@@ -1,13 +1,15 @@
 .react-switch-checkbox {
     height: 0;
     width: 0;
-    visibility: hidden;
+    margin: 0;
+    display: none;
   }
   
   .react-switch-label {
+    margin: 0px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     cursor: pointer;
     width: 100px;
     height: 50px;
@@ -19,7 +21,7 @@
   
   .react-switch-label .react-switch-button {
     content: '';
-    position: absolute;
+    position: absolute; 
     top: 2px;
     left: 2px;
     width: 45px;
