--- a/src/pages/Pedido/style.css
+++ b/src/pages/Pedido/style.css
@@ -1,55 +1,20 @@
-#container_pedido{
-    background:'#FFF'; 
-    padding:40px; 
-    border-radius:8px
+.container-central-pgpedido{
+    background:rgb(255, 255, 255); 
+    padding-top:20px; 
+    padding-bottom:20px; 
+    border-radius:8px;
+    margin-top: 10px;
+    box-shadow: 0px 5px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
-#containergeral_pedido{
-    text-align:'center'; 
-    padding-bottom:10px
-}
-
-#logo_pedido{
-    height: 50px;
-    width: 50px;
-}
-
-.separador_pedido{
-    width:'100%'; 
-    height:0.5px; 
-    background:'#F3B442'; 
-    margin-top:10px; 
-    margin-bottom:0px;
-}
-
-.listaProduto_pedido{
-    padding:0px; 
-    width:'96%'; 
+.list-prod-pgpedido{
+    padding:0px;
+    margin:0px;
+    width: 100%;
     height:400px;
-}
-
-.listaProduto_pedido li{
-    list-style:'none'
-} 
-
-.listaProduto_pedido li div{
-    cursor:'pointer'; 
-    border-bottom-style:'solid'; 
-    border-bottom-color:'#e3e3e3'; 
+    overflow: auto;
+    border-bottom-style: solid;
     border-bottom-width:0.5px; 
-    padding-top:5px; 
-    padding-bottom:5px
-}
-
-.img_item_produto_pedido{
-    padding: 5;
-}
-
-.img_item_produto_pedido{
-    padding: 5;
-}
-
-.size_img_produto_pedido{
-    height:50; 
-    width:50
+    border-bottom-color:rgb(243, 180, 66); 
+    margin-bottom:10px;
 }
