--- a/src/pages/Dashboard/style.css
+++ b/src/pages/Dashboard/style.css
@@ -5,6 +5,10 @@
 }
 
 .navbar-pgdashboard{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
     background: #F43d;
     box-shadow: 0px 5px 5px 1px rgba(0, 0, 0, 0.1);
     justify-content: center;
